--- a/to_do_app/pubspec.yaml
+++ b/to_do_app/pubspec.yaml
@@ -15,8 +15,9 @@ dependencies:
   intl: ^0.20.2
   mvc_pattern: ^8.12.0
   collection: ^1.19.1
-  shared_preferences: ^2.5.2
+  shared_preferences: ^2.0.15
   shimmer: ^3.0.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
@@ -30,7 +31,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - images/
+    - images/splash_app/
 
   fonts:
   - family: Inter
