--- a/to_do_app/pubspec.yaml
+++ b/to_do_app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^2.0.15
   shimmer: ^3.0.0
   provider: ^6.0.3
+  firebase_core: ^3.11.0
 
 dev_dependencies:
   flutter_test:
