--- a/to_do_app/pubspec.yaml
+++ b/to_do_app/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   shimmer: ^3.0.0
   provider: ^6.0.3
   firebase_core: ^3.11.0
+  firebase_auth: ^5.4.2
+  google_sign_in: ^6.2.2
+  cloud_firestore: ^5.6.3
 
 dev_dependencies:
   flutter_test:
@@ -33,6 +36,7 @@ flutter:
 
   assets:
     - images/splash_app/
+    - images/icon_app/
 
   fonts:
   - family: Inter
