--- a/to_do_app/pubspec.yaml
+++ b/to_do_app/pubspec.yaml
@@ -10,9 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   cupertino_icons: ^1.0.8
-  intl: ^0.20.2
+  intl: ^0.19.0
   mvc_pattern: ^8.12.0
   collection: ^1.19.1
   shared_preferences: ^2.0.15
