--- a/to_do_app/pubspec.yaml
+++ b/to_do_app/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   firebase_auth: ^5.4.2
   google_sign_in: ^6.2.2
   cloud_firestore: ^5.6.3
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.10.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
